--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,7 @@ html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: 100%;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 body {
